--- a/example/config.toml
+++ b/example/config.toml
@@ -1,11 +1,11 @@
 baseURL = "http://example.com/"
 languageCode = "en-us"
-title = "Hugo Example Site"
+title = "David's Playground"
 theme = "minimal"
 
 [params]
     author = "David Rodden"
-    description = "Site created using Hugo"
+    description = "David Rodden's site powered by Hugo"
     githubUsername = "David-Rodden"
     accent = "red"
     showBorder = true
@@ -21,40 +21,20 @@ theme = "minimal"
     weight = 1
 
 [[menu.main]]
-    url = "/post/"
-    name = "Posts"
+    url = "/resume/"
+    name = "Resume"
     weight = 2
-
-[[menu.main]]
-    url = "/project/"
-    name = "Projects"
-    weight = 3
 
 # Social icons to be shown on the right-hand side of the navigation bar
 # The "name" field should match the name of the icon to be used
 # The list of available icons can be found at http://fontawesome.io/icons/
 
 [[menu.icon]]
-    url = "mailto:me@example.com"
-    name = "envelope-o"
+    url = "https://github.com/david-rodden/"
+    name = "github"
     weight = 1
 
 [[menu.icon]]
-    url = "https://github.com/username/"
-    name = "github"
-    weight = 2
-
-[[menu.icon]]
-    url = "https://twitter.com/username/"
-    name = "twitter"
-    weight = 3
-
-[[menu.icon]]
-    url = "https://www.linkedin.com/in/username/"
+    url = "https://www.linkedin.com/david-rodden-701819124/"
     name = "linkedin"
-    weight = 4
-
-[[menu.icon]]
-    url = "https://www.stackoverflow.com/username/"
-    name = "stack-overflow"
-    weight = 5
+    weight = 2
